plugins {
	id 'dev.architectury.loom' version '1.7-SNAPSHOT' apply false
	id 'architectury-plugin' version '3.4-SNAPSHOT'
	id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
}

architectury {
	minecraft = project.minecraft_version
}

allprojects {
	group = rootProject.maven_group
	version = "${rootProject.minecraft_version}-${rootProject.mod_version}"

	repositories {
		maven {
			name = 'ParchmentMC'
			url = 'https://maven.parchmentmc.org'
		}

		flatDir {
			dirs("libs")
		}

		maven {
			name = "Fuzs Mod Resources"
			url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/"
		}

		maven {
			name = "Common Network"
			url = "https://jm.gserv.me/repository/maven-public/"
		}
	}
}

subprojects {
	apply plugin: 'dev.architectury.loom'
	apply plugin: 'architectury-plugin'
	apply plugin: 'maven-publish'

	base {
		// Set up a suffixed format for the mod jar names, e.g. `example-fabric`.
		archivesName = "$rootProject.mod_id-$project.name"
	}

	repositories {
		// Add repositories to retrieve artifacts from in here.
		// You should only use this when depending on other mods because
		// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
		// See https://docs.gradle.org/current/userguide/declaring_repositories.html
		// for more information about repositories.
	}

	loom {
		silentMojangMappingsLicense()
	}

	dependencies {
		minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
		mappings loom.layered() {
			officialMojangMappings() {
				setNameSyntheticMembers(false)
			}
			parchment("org.parchmentmc.data:parchment-${minecraft_version}:${mapping_version}@zip")
		}

		dependencies {
			// LunatriusCore
			implementation 'org.jetbrains:annotations:24.1.0'
		}
	}

	java {
		// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
		// if it is present.
		// If you remove this line, sources will not be generated.
		withSourcesJar()

		sourceCompatibility = JavaVersion.VERSION_21
		targetCompatibility = JavaVersion.VERSION_21
	}

	tasks.withType(JavaCompile).configureEach {
		it.options.release = 21
	}

	// Configure Maven publishing.
	publishing {
		publications {
			mavenJava(MavenPublication) {
				artifactId = base.archivesName.get()
				from components.java
			}
		}

		// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
		repositories {
			// Add repositories to publish to here.
			// Notice: This block does NOT have the same function as the block in the top level.
			// The repositories here will be used for publishing your artifact, not for
			// retrieving dependencies.
		}
	}

	sourceSets {
		main {
			java {
				srcDirs = ['src/main/java']
			}
		}
	}
}